# 2024-2A-T02-EC11-G01

./: .env.develop.tmpl  .gitignore  Justfile  README.md  docker-compose.yml  init.sh
.github/workflows/: deploy-docusaurus.yaml  deploy.yml
backend/: .env.develop.tmpl  Justfile  go.mod  go.sum
backend/api/: docs.go  swagger.json  swagger.yaml
backend/configs/: env.go  postgres.go  postgres_test.go  rabbitmq.go
backend/swagger/: docs.go  swagger.json  swagger.yaml
cartesi/: .gitignore
cartesi/src/: main.rs
circle-fitting/: commands.md  dockerfile  funTreeCountingGT.py  getAIC_BIC.py  getBestFitEllipse.py  getBestFitEllipses.py  getOX.py  getObjectComplexity.py  getTotalPerfMultfromArea.py  main.py  requirements.txt  runEllClustering.py  runEllClusteringForMerge.py  runFastMergeAlgo.py  runMergeFitting.py
circle-fitting/legacy/: .dockerignore  parallel-img-preprocessing.py  requirements.txt
database/: package.json  pnpm-lock.yaml
database/prisma/: schema.prisma
docs/: docusaurus.config.ts
docs/docs/: intro.md
embedded/: Cargo.toml
embedded/src/: main.rs
embedded/src/features/aws/: s3_upload.rs
filesystem/: Dockerfile  entrypoint.sh
infra/rabbitMQ/: rabbitmq.conf
infraestructure/prometheus/: prometheus.yml
infraestructure/rabbitmq/: definitions.json
predictor/: Dockerfile  requirements.txt
predictor/src/: main.py
serverless/: Dockerfile  main.py  requirements.txt
serverless/clients/: rabbitmq.py
src/camera/: Cargo.toml
src/circle-fitting/: img-preprocessing.py
streamlit/: app.py  main.py  request_handler.py
(+67 files in other folders)
