[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.38"
v4l = "0.14.0"
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
uuid = { version = "1.0", features = ["v4"] }
